# cookbook-eleks-camp

./: .gitignore  CMakeLists.txt  README.md
data/: CMakeLists.txt  receipt11.txt  receipt13.txt  receipt15.txt  receipt16.txt  receipt22.txt  receipt3.txt  receipt5.txt  receipt7.txt  receipt8.txt  receipt9.txt
server/: common_headers.h  connection.h  server.h  server_demo.cpp  types_of_messages.h
server/data/: receipt1.txt  receipt10.txt  receipt12.txt  receipt14.txt  receipt17.txt  receipt18.txt  receipt19.txt  receipt2.txt  receipt20.txt  receipt21.txt  receipt23.txt  receipt24.txt  receipt25.txt  receipt4.txt  receipt6.txt  receipt_id.txt  storage_info.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt
src/libs/calculatedialog/: CMakeLists.txt  calculatedialog.cpp  calculatedialog.h  calculatedialog.ui
src/libs/createreceiptview/: CMakeLists.txt  createreceiptveiw.ui  createreceiptview.cpp  createreceiptview.h
src/libs/database/: CMakeLists.txt  proxyreceiptsDB.cpp  proxyreceiptsDB.h
src/libs/downloaddialog/: CMakeLists.txt  client.h  common_headers.h  dialog.cpp  dialog.h  dialog.ui  listmodel.cpp  listmodel.h  types_of_messages.h
src/libs/receiptview/: CMakeLists.txt  receiptview.cpp  receiptview.h  receiptview.ui
src/libs/searchdialog/: CMakeLists.txt  searchdialog.cpp  searchdialog.h
src/libs/sidebar/: CMakeLists.txt  sidebar.cpp  sidebar.h  sidebarview.cpp  sidebarview.h  sidebarviewprovider.cpp  sidebarviewprovider.h  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
src/libs/ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.h
src/libs/viewwidget/: CMakeLists.txt  viewwidget.cpp  viewwidget.h
